--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,22 @@
 {
-  "name": "visol/viresponsiveimages",
-  "type": "typo3-cms-extension",
-  "description": "Responsive images for fluid_styled_content",
-  "homepage": "https://github.com/visol/ext-viresponsiveimages",
-  "license": [
-    "GPL-2.0-or-later"
-  ],
-  "require": {
-    "typo3/cms-core": ">10.4.0"
-  },
-  "autoload": {
-    "psr-4": {
-      "Visol\\Viresponsiveimages\\": "Classes/"
-    }
-  }
+	"name": "visol/viresponsiveimages",
+	"type": "typo3-cms-extension",
+	"description": "Responsive images for fluid_styled_content",
+	"homepage": "https://github.com/visol/ext-viresponsiveimages",
+	"license": [
+		"GPL-2.0-or-later"
+	],
+	"extra": {
+		"typo3/cms": {
+			"extension-key": "viresponsiveimages"
+		}
+	},
+	"require": {
+		"typo3/cms-core": "^10.4 || ^11.4"
+	},
+	"autoload": {
+		"psr-4": {
+			"Visol\\Viresponsiveimages\\": "Classes/"
+		}
+	}
 }
