--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,18 @@
 		}
 	},
 	"require": {
-		"typo3/cms-core": "^11.4 || ^12.4"
+		"typo3/cms-core": "^11.4 || ^12.4",
+		"wapplersystems/core-upgrader": "^12.0"
 	},
 	"autoload": {
 		"psr-4": {
 			"Visol\\Viresponsiveimages\\": "Classes/"
+		}
+	},
+	"config": {
+		"allow-plugins": {
+			"typo3/class-alias-loader": true,
+			"typo3/cms-composer-installers": true
 		}
 	}
 }
